enabled caching,  fixed scrollbar, removed expired column from cart table, favourites not shown when cart in empty

--- a/public/style.css
+++ b/public/style.css
@@ -218,6 +218,16 @@ hr{
   outline: 1px solid slategrey;
 } */
 
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: #a8a8a8;
+  outline: 1px solid slategrey;
+}
+
 #order{
     position:absolute;
     left:37%;
